# aiohttp-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PROJECT_INDEX.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-labeler.yml  publish.yml
aiohttp_mcp/: __init__.py  app.py  core.py  discover.py  registry.py  setup.py  streamable_http.py  streamable_http_manager.py  transport.py  types.py
aiohttp_mcp/protocol/: __init__.py  context.py  func_metadata.py  messages.py  models.py  registry.py  server.py  streams.py  typedefs.py  versions.py
docs/: native-mcp-implementation-plan.md
docs/plan/: 00-overview.md  01-pydantic-returns.md  02-content-helpers.md  03-tool-middleware.md  04-mcp-group.md  04-test-helpers.md  05-mcp-group.md  05-tool-tags.md  06-tool-tags.md  07-test-helpers.md
examples/: client.py  server.py  server_auth.py  server_context.py  server_custom.py  server_streamable_http.py  server_subapp.py  streamable_http_client.py  streamable_http_server.py
tests/: conftest.py  test_app.py  test_context.py  test_core.py  test_discover.py  test_event_store.py  test_func_metadata.py  test_output_schema.py  test_registry.py  test_request_context.py  test_server.py  test_sse_transport.py  test_streamable_http_integration.py  test_streamable_http_unit.py  test_streamable_transport.py  test_streams.py  test_transport.py  test_versions.py
